# toolForDataset

./: CMakeLists.txt  README.md
output/: d_tum3.pcd  d_tum3.ply  remode.ply
src/: compute_relative_error.cpp  d2PointCloud.cpp  depthmap2file_z.cpp  joinMap.cpp  poseNum2imageName.cpp  z2PointCloud.cpp
src/ICL/: read_icl_dataset.cpp  write_icl_dataset.cpp
src/TUM/: depth_file2PointCloud.cpp  depth_image2depth_file.cpp  tumformat2PointCloud.cpp
src/colmap/: readPose.cpp
